<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff4f4f4">

    <ImageView
        android:id="@+id/iv_large_cover"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/subscription_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/iv_large_cover"
        android:background="@color/white">

        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:background="@drawable/shape_subscription_bg"
            android:gravity="center"
            android:text="@string/tv_detail_subscribe"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/player_control_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/subscription_container"
        android:background="@color/sub_bar">

        <ImageView
            android:id="@+id/detail_play_control"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            android:src="@mipmap/play_black_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/detail_play_control"
            android:text="@string/tv_detail_continues_play"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/detail_arrow"
            android:text="@string/tv_detail_selection" />

        <ImageView
            android:id="@+id/detail_arrow"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:contentDescription="TODO"
            android:src="@mipmap/arrow_icon" />


    </RelativeLayout>

    <com.example.himalaya.views.RoundRectImageView
        android:id="@+id/viv_small_cover"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/iv_large_cover"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-40dp"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_large_cover"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-30dp"
        android:layout_toEndOf="@id/viv_small_cover"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_detail_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_album_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_detail_author"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/detail_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/player_control_container" >


    </FrameLayout>






</RelativeLayout>